# AtrociousSort

./: Cargo.toml  README.md
src/: lib.rs
src/algorithms/: bogo_sort.rs  bogobogo_sort.rs  inteligent_design_sort.rs  intelligent_design_sort.rs  mod.rs  sleep_sort.rs  slowsort.rs  stalinsort.rs  stoogesort.rs
