[package]
name = "atrocious_sort"
version = "0.1.6"
authors = ["Christian Schult <christian-schult@outlook.de>"]
edition = "2021"
license = "GPL-3.0-only"
description = "Some of the most useless sorting algorithms implemented in Rust."
readme = "README.md"
repository = "https://github.com/Chromfalke/AtrociousSort"
keywords = ["silly", "useless", "sort"]
categories = ["algorithms"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
